# takehome_assignment

./: .gitignore  README.md  pyproject.toml
report/: report.md
src/humanoid_standup/configs/: config.yaml
src/humanoid_standup/envs/: humanoid_standup_env.py
src/humanoid_standup/models/: actor_critic.py
src/humanoid_standup/scripts/: eval.py  eval_lie.py  test_env.py  train.py
src/humanoid_standup/scripts/runs/t10/: config.yaml  events.out.tfevents.1784534067.pop-os.631038.0
